2006-06-05  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/paint-funcs/scale-funcs.c (scale_region_lanczos):
	fix variable declarations accidentally changed from gdouble
	to gint in revision 1.7; fixes bug #343804.

2006-06-06  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.10.

2006-06-05  Sven Neumann  <sven@gimp.org>

	* Made 2.3.9 development release.

2006-06-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpdrawtool.c
	(gimp_draw_tool_draw_rectangle_by_anchor)
	(gimp_draw_tool_draw_arc_by_anchor): subtract 1 from outlined
	width/height instead of adding 1 to filled.

2006-06-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw): use
	GimpDrawTool API, not GimpCanvas one. Some cleanup.

2006-06-05  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/selection.pdb: fixed documentation of
	gimp-selection-sharpen (bug #343911).

	* libgimp/gimpselection_pdb.c: regenerated.

2006-06-05  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.[ch]
	* app/core/gimpchannel.[ch]
	* app/core/gimpselection.c:
	* app/actions/select-commands.c: further cleaned up the patch from
	bug #88633.

2006-06-05  Karine Delvare  <edhel@gimp.org>

	* app/tools/tools-enums.[ch]: added GimpRectangleGuide enum.

	* app/tools/gimpcropoptions.c
	* app/tools/gimprectangleoptions.[ch]
	* app/tools/gimprectangletool.c: added GimpRectangleGuide option to
	draw guides inside the rectangle. Fixes bug #323669.

2006-06-05  Michael Natterer  <mitch@gimp.org>

	Applied slightly modified patch from saulgoode which allows to
	border a selection without feathering. Fixes bug #88633.

	* app/paint-funcs/paint-funcs.[ch] (border_region): added boolean
	"feather_border" parameter.

	* app/core/gimpchannel.[ch]: GimpChannel::border(): ditto.

	* app/core/gimpselection.c: changed accordingly.

	* app/actions/select-commands.c: added a toggle to the border
	dialog and pass it to gimp_channel_border().
